@@ -3,6 +3,8 @@
 * Bug fix: fill in the correct size for maildir fetched mail rather than using
   the rounded-up size and adding a ton of nulls.
 * -D on the command line overrides macro definitions in the configuration file.
+* Build the attachment list when the first attachment match rule is found rather
+  than for every mail regardless.
 
 03 March 2007
 
@@ -87,4 +89,4 @@
   the mail was very rarely reallocated, now that the header is added it is.
 * Changed all the descriptions to static buffers and audited use of snprintf.
 
-$Id: CHANGES,v 1.24 2007-03-04 17:52:13 nicm Exp $
+$Id: CHANGES,v 1.25 2007-03-04 18:09:55 nicm Exp $
